--- a/app/css/kanban.styl
+++ b/app/css/kanban.styl
@@ -1,7 +1,7 @@
 @import 'reset'
 @import 'fn'
 
-/* 变量定义 */
+// define variables
 main_bg_color = rgb(35,113,159)
 top_height = 2.5em																// 顶部高度
 top_bg_color = rgb(30,99,140)											// 顶部背景色
@@ -14,30 +14,35 @@ kb_group_card_color1 = darken(kb_group_card_color, 50%)	// 任务次字体颜色
 
 body 
   background-color main_bg_color
+  overflow hidden
 
 /* top navigator */
 .top
+	box-sizing border-box
 	background-color top_bg_color
 	height top_height
+	line-height top_height
+	vertical-align middle
 
 /* kanban's container */
 .kb
+	box-sizing border-box
 	background-color kb_bg_color
 	box-shadow 0 0 0 1px rgba(0,0,0,.1)
-	position absolute
-	top top_height
-	bottom 0
-	left 0
-	right 0
-
-	> .group
+	position relative
+	min-height 10em
+	
+	>.cram
+		margin 8px 8px 8px 0
+	
+	.group
+		box-sizing border-box
+		max-height 100%
 		background-color kb_group_bg_color
-		border-radius 5px
+		border-radius 0px
+		width 20em
+		margin-left 8px
 		float left
-		min-width 20em
-		margin 10px 5px 10px 5px
-		&:first-child
-			margin-left 10px
 
 		> .header
 			//background-color kb_group_header_bg_color
@@ -51,7 +56,7 @@ body
 				font-weight bold
 
 		> .cards
-
+			overflow auto 
 			> .card
 				background-color kb_group_card_bg_color
 				color kb_group_card_color
@@ -61,3 +66,8 @@ body
 
 				> .stat
 					color rgb(179,179,179)
+
+		> .bottom
+      height 3em
+      text-align center
+      line-height 3em
